--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -1,5 +1,9 @@
-.question {
+.question-container {
   grid-area: 1 / 1 / 3 / 1;
+  position: relative;
+}
+
+.question {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #333;
