--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,18 +1,18 @@
 header {
-  min-height: 60px;
-  background: linear-gradient(135deg, #1e1e1e, #333);
+  height: var(--header-height);
+  background: linear-gradient(135deg, var(--primary), var(--hover));
   color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   font-family: "Menlo", monospace;
   font-size: 24px;
-  font-weight: bold;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   letter-spacing: 1px;
+  font-weight: bold;
 }
 
 .logo {
   /* text-transform: uppercase; */
-  display: flex;
   height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
