--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -3,7 +3,7 @@
   position: relative;
 }
 
-.question {
+.question-content {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #333;
