--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,12 +8,15 @@
 :root {
   --grid-gap: 12px;
   --header-height: 60px;
+  --default-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  font-family: var(--default-font);
 }
 
 main {
