--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -4,26 +4,24 @@
 }
 
 .question-content {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #333;
-  background: #fff;
+  --bg-color: #f6f8fa;
+  color: var(--text);
   padding: 20px;
-  border-radius: 8px;
   line-height: 1.6;
   overflow: auto;
-  max-height: calc(100vh - 60px);
+  max-height: calc(100vh - var(--header-height));
+
   p {
     font-size: 16px;
     margin-bottom: 10px;
   }
 
   code {
-    background: #f6f8fa;
+    background: var(--bg-color);
     padding: 2px 6px;
     border-radius: 4px;
     font-size: 14px;
-    color: #d63384;
+    color: var(--secondary);
   }
 
   em {
@@ -36,8 +34,8 @@
 
   blockquote {
     font-family: Menlo, monospace;
-    background: #f8f9fa;
-    border-left: 4px solid #d63384;
+    background: var(--bg-color);
+    border-left: 4px solid var(--secondary);
     padding: 10px 15px;
     margin: 10px 0;
   }
@@ -53,16 +51,16 @@
 
   pre {
     font-family: Menlo, monospace;
-    background: #f8f9fa;
-    border-left: 4px solid #d63384;
+    background: var(--bg-color);
+    border-left: 4px solid var(--secondary);
     padding: 10px 15px;
     margin: 10px 0;
-    white-space: pre-wrap; /* Allows wrapping */
-    word-wrap: break-word; /* Breaks long words */
-    overflow: auto; /* Shows scrollbar only when needed */
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow: auto;
     code {
       background: none;
-      color: #f8f8f2;
+      color: var(--bg-color);
       padding: 0;
       font-size: 14px;
     }
