--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -11,6 +11,11 @@
   overflow: auto;
   max-height: calc(100vh - var(--header-height));
 
+  img {
+    min-width: 200px;
+    max-width: 100%;
+    height: auto !important;
+  }
   p {
     font-size: 16px;
     margin-bottom: 10px;
