--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -11,7 +11,7 @@ button {
   font-weight: 600;
   line-height: 1.25rem;
   padding: 0.75rem 1rem;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
@@ -20,7 +20,7 @@ button {
 
   &:hover {
     background-color: var(--bg-color-hover);
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: 2px 4px 1x2px rgba(0, 0, 0, 0.25);
   }
 
   &:focus-visible {
@@ -29,5 +29,29 @@ button {
 
   &:active {
     background-color: var(--bg-color-active);
+  }
+}
+
+.round-icon-btn {
+  --normal-bg-color: #ffffff;
+  --hover-bg-color: #cfcfcf;
+  --active-bg-color: #b8b8b8;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  background-color: var(--normal-bg-color);
+  transition: background-color 250ms;
+  background-image: var(--icon);
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0px;
+
+  &:hover {
+    background-color: var(--hover-bg-color);
+  }
+
+  &:active {
+    background-color: var(--active-bg-color);
   }
 }
