--- a/src/styles/videoio.css
+++ b/src/styles/videoio.css
@@ -18,10 +18,10 @@
     height: 100%;
     aspect-ratio: 16 / 9;
     border-radius: 6px;
+    background-color: lightblue;
     .video-in {
       width: 100%;
       height: 100%;
-      background-color: lightblue;
     }
   }
 
@@ -33,6 +33,7 @@
     border-radius: 6px;
     right: 4px;
     bottom: 4px;
+    border-radius: 6px;
     background-color: coral;
     .video-out {
       width: 100%;
